--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,14 +24,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Setup Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.x'
-
       - name: Patch README
         run: |
-          python3 ./add_link_to_readme.py README.md > README.md
+          python3 ./add_link_to_readme.py README.md README.md
 
       - name: Setup MAPI
         uses: BadMagic100/setup-hk@v1
