--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,7 +5,7 @@ on:
   push:
     branches:
     - 'main'
-    - '1.5-port*'
+    - '1.5-port'
   pull_request:
     branches: [ main ]
   workflow_dispatch:
