--- a/GrassyKnight.csproj
+++ b/GrassyKnight.csproj
@@ -4,8 +4,8 @@
     <TargetFramework>net472</TargetFramework>
     <RootNamespace>GrassyKnight</RootNamespace>
     <AssemblyTitle>GrassyKnight</AssemblyTitle>
-    <AssemblyVersion>2.0.0.0</AssemblyVersion>
-    <Deterministic>true</Deterministic>
+    <AssemblyVersion>2.0.0.*</AssemblyVersion>
+    <Deterministic>false</Deterministic>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
