Only run workflow on main branch

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,9 +3,7 @@ name: Build
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches:
-    - 'main'
-    - '1.5-port'
+    branches: [ main ]
   pull_request:
     branches: [ main ]
   workflow_dispatch:
