--- a/GrassyKnight.csproj
+++ b/GrassyKnight.csproj
@@ -11,7 +11,7 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <HollowKnightRefs>..\API</HollowKnightRefs>
+    <HollowKnightRefs>API</HollowKnightRefs>
     <ExportDir>bin\Publish</ExportDir>
   </PropertyGroup>
 
